--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "prettier": "prettier --config .prettierc './src/**/*.ts' --write",
     "jasmine": "jasmine",
     "test": "npm run build && npm run jasmine",
-    "start": "nodemon src/app.ts",
-    "build": "npx tsc"
+    "dev": "nodemon src/app.ts",
+    "build": "npx tsc",
+    "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
