--- a/package.json
+++ b/package.json
@@ -16,32 +16,36 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "express-winston": "^4.2.0",
-    "jasmine-spec-reporter": "^7.0.0",
-    "sharp": "^0.29.1",
-    "typescript": "^4.4.3"
+    "ajv": "6.12.6",
+    "express": "4.17.1",
+    "express-winston": "4.2.0",
+    "jasmine-spec-reporter": "7.0.0",
+    "sharp": "0.29.1",
+    "supertest": "6.1.6",
+    "typescript": "4.4.3",
+    "winston": "3.3.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/jasmine": "^3.9.1",
-    "@types/node": "^16.9.4",
-    "@types/sharp": "^0.29.2",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jasmine": "^4.1.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.25.3",
-    "eslint-plugin-standard": "^5.0.0",
-    "jasmine": "^3.9.0",
-    "nodemon": "^2.0.12",
-    "prettier": "^2.4.1",
-    "ts-node": "^10.2.1"
+    "@types/express": "4.17.13",
+    "@types/jasmine": "3.9.1",
+    "@types/node": "16.9.4",
+    "@types/sharp": "0.29.2",
+    "@types/supertest": "2.0.11",
+    "@typescript-eslint/eslint-plugin": "4.31.2",
+    "@typescript-eslint/parser": "4.31.2",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-config-standard": "16.0.3",
+    "eslint-plugin-import": "2.24.2",
+    "eslint-plugin-jasmine": "4.1.2",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-promise": "5.1.0",
+    "eslint-plugin-react": "7.25.3",
+    "eslint-plugin-standard": "5.0.0",
+    "jasmine": "3.9.0",
+    "nodemon": "2.0.12",
+    "prettier": "2.4.1",
+    "ts-node": "10.2.1"
   }
 }
